--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
     <!-- MOVEMENTS -->
-<div class="summary">
+<!-- <div class="summary">
   <p class="summary__label">In</p>
   <p class="summary__value summary__value--in">0000€</p>
   <p class="summary__label">Out</p>
@@ -57,7 +57,7 @@
   <p class="summary__label">Interest</p>
   <p class="summary__value summary__value--interest">0000€</p>
   <button class="btn--sort">&downarrow; SORT</button>
-</div>
+</div> -->
 <!-- summary - movimentação das cotações -->
       <div class="movements">
         <div class="movements__row">
