--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <div class="movements">
         <div class="movements__row">
         </div>
+        <!-- <button class="form__btnC" onClick="removeTrade"(${tradie.id})><p>clear</p></button> -->
       </div>
 
       <!-- <div class="operation operation--loan">
@@ -77,7 +78,7 @@
               <input class="form__input" type="text" id="comprador" placeholder="comprador"/>
               <input class="form__input" type="number" id="cbm" placeholder="cbm"/> 
               <input class="form__input" type="number" id="price" step='0.01' placeholder="preço"/>
-              <input class="form__input" type="text" id="data" placeholder="data"/>
+              <!-- <input class="form__input" type="text" id="data" placeholder="data"/> -->
               <input class="form__input" type="number" step='0.01' id="base" placeholder="preço base" />
               <input type="number" step='0.01' class="form__input form__input--loan-amount" id="frete" placeholder="preço frete"/>
 
